Playing with hero logo to stop mobile blurring

--- a/sass/components/custom-components/_about-us.scss
+++ b/sass/components/custom-components/_about-us.scss
@@ -38,6 +38,7 @@
       flex-direction: column;
 
       h2 {
+        align-self: flex-start;
         background: #a57b46;
         background: linear-gradient(
           to right,
