--- a/sass/components/custom-components/_footer.scss
+++ b/sass/components/custom-components/_footer.scss
@@ -27,6 +27,7 @@
         text-align: center;
 
         h3 {
+          width: fit-content;
           font-size: 18px;
           color: $color__yellow;
           line-height: 1;
